# Agentic-AI-Assignments

Day_01/02_PRACTICAL TASK/01_uv/hello_uv/: README.md  pyproject.toml
Day_01/02_PRACTICAL TASK/01_uv/hello_uv/src/hello_uv/: __init__.py  main.py
Day_01/02_PRACTICAL TASK/01_uv/project/: README.md  pyproject.toml
Day_01/02_PRACTICAL TASK/01_uv/project/src/project/: main.py
Day_01/02_PRACTICAL TASK/02_openrouter/story_generater_ai/: main.py  pyproject.toml
Day_01/02_PRACTICAL TASK/02_openrouter/story_generator_ai/: .env  main.py  pyproject.toml
Day_01/02_PRACTICAL TASK/04_hello_agent/sync/hello_agent/: .env
Day_03/health_wellness_agent/: .env  agent.py  config.py  context.py  guardrails.py  handoff.py  main.py  pyproject.toml
Day_03/health_wellness_agent/other_agents/: escalation_agent.py  injury_support_agent.py  nutrition_expert_agent.py
Day_03/health_wellness_agent/tools/: goal_analyzer.py  meal_planner.py  scheduler.py  tracker.py  workout_recommender.py
