[project]
name = "hello-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ummehani", email = "hanirh2468@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hello-uv = "hello_uv:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
